# dats-defense

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-day2-10.json  test-day2-12.json  test-day2-13.json  test-day2-14.json  test-day2-15.json  test-day2-16.json  test-day2-7.json  test-day2-8.json  test-day2-9.json  test.py
.zed/: settings.json
influxdb/config/: influx-configs
influxdb/data/: influxd.bolt
influxdb/data/engine/data/4a50fca416e3be66/autogen/1/: fields.idxl
influxdb/data/engine/wal/4a50fca416e3be66/autogen/1/: _00001.wal
libs/: pyproject.toml
libs/libs/: alerts.py  config.py
libs/libs/game/: api.py  dispatcher.py  game.py
libs/libs/metrics/: client.py
libs/libs/models/: cell.py  core.py  zombie.py
mockgame/: app.py
mockgame/game/: game_logic.py  map_generate.py
mockgame/game/models/: zombie.py
mockgame/game/models_gen/: block.py  core.py  player.py  zombie.py
services/core/: pyproject.toml
src/: bot.py  config.py  daemon.py  main.py
src/libs/: alerts.py
src/libs/game/: api.py  game.py  loop.py
src/libs/models/: block.py  cell.py  core.py  player.py  zombie.py
