[tool.poetry]
name = "dats-defense"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.poetry.dependencies]
python = "^3.12"
libs = { path = "./libs", develop = true }
core = { path = "./services/core", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
