[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.local.dependencies]
libs = {path = "../../libs", develop = true}

[tool.pyright]
venv = ".venv"
venvPath = "../../"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
